[Server] fix URL from string by using URI